  - Bug 1889281 - grinder.script relative path bug. Thanks to Ross
    Nicholson for the report, and the suggested fix.
  - Bug 1875880 - Script validation wrong for properties file in sub
    directory.

  HTTP Digest Authentication example from Matt Moran.

  German console translation updates form Matthias Dillier.

  Italian console translation updates from Meo Bogliolo.

  Fulfil Feature Request 1891023 - Worker and Agent id's. The script context
  has new getAgentNumber() and getProcessNumber() methods. getThreadID() has
  been renamed to getThreadNumber() for consistency. Thanks to Ross Nicholson
  for requesting this feature.

  Fix bug 1897988 - grinder.initialSleepTime issue. The initialSleepTime
  property was broken. Thanks to whoever reported this.

  Fix bug 1893027 - ArrayIndexOutOfBoundsException in TCPProxy. Thanks to
  Brian Dols for reporting this.

  Fix bug 1709285 - HTTP plug-in records wrong times with
  grinder.useNanoTime=true. Thanks to liaoya for the report.

  Fulfil Feature Request 1902280 - Use absolute start times in the data log.
  This allows the logs from different workers to be merged, so long as their
  machine clocks are synchronised. Thanks to Olivier Merlin for requesting
  this feature.

  Fix bug 1549708 - HTTPRequest.setDataFromFile() is not thread safe. The
  HTTPRequest methods that set defaults are now thread safe, and the Javadoc
  has been updated to warn that the default setters are not intended to be
  used by multiple worker threads. Thanks to Huifeng Shen for the report.


The Grinder 3.0.1
-----------------

  Fix bug 1876273 - grinder.jar has incorrect manifest classpath.


The Grinder 3.0
---------------

  The console now expects a properties file to be selected, rather than a
  script. The properties file determines the script to run through the
  grinder.script property. Other properties override the values in the
  agents' local grinder.properties file. This provides much better